--- a/src/app/pages/home/weather-current/weather-current.component.scss
+++ b/src/app/pages/home/weather-current/weather-current.component.scss
@@ -1,12 +1,17 @@
 @import "../../../../assets/scss/styles";
 
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 16rem;
+}
+
 main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 1rem;
-  height: 100%;
-  max-height: 35vh;
-
+  height: 16rem;
   padding: 0 1.5rem 1.5rem;
 
   .big-icon {
