--- a/src/app/pages/home/weather-history/weather-history-header/weather-history-header.component.scss
+++ b/src/app/pages/home/weather-history/weather-history-header/weather-history-header.component.scss
@@ -3,14 +3,14 @@
 article {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
-  padding: 0 1.5rem;
+  gap: 1rem;
+  padding: 0.5rem 1.5rem;
   border-top: 1px solid $color-common-200;
+  background-color: $color-pure-white;
 
-  img {
-    height: 4rem;
-    width: 4rem;
+  strong {
+    @include text-base-bold;
   }
 }
