--- a/src/app/pages/home/weather-hourly/weather-hourly.component.html
+++ b/src/app/pages/home/weather-hourly/weather-hourly.component.html
@@ -1,5 +1,11 @@
 <app-card title="Previsão para as próximas horas">
-  <main body>
+  <section *ngIf="isLoading" body>
+    <app-loading></app-loading>
+  </section>
+  <section *ngIf="!isLoading && weatherHourlyList.length === 0" body>
+    <app-not-found></app-not-found>
+  </section>
+  <main *ngIf="!isLoading && weatherHourlyList.length !== 0" body>
     <app-weather-hourly-item
       *ngFor="let item of weatherHourlyList"
       [weatherHourly]="item"
