feat: show location name

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,26 @@
 <section>
-  <app-weather-current
-    [weatherCurrent]="weatherCurrent"
-    [isLoading]="isLoading"
-  ></app-weather-current>
-  <app-map #map (mapClick)="getWeatherForecast($event)"></app-map>
-  <app-weather-history
-    [weatherHistoryList]="weatherHistoryList"
-    [isLoading]="isLoading"
-    (historyClick)="getWeatherForecastHistoryById($event)"
-  ></app-weather-history>
-  <app-weather-daily
-    [weatherDailyList]="weatherDailyList"
-    [isLoading]="isLoading"
-  ></app-weather-daily>
-  <app-weather-hourly
-    [weatherHourlyList]="weatherHourlyList"
-    [isLoading]="isLoading"
-  ></app-weather-hourly>
+  <header>
+    <img src="icons/pin.svg" alt="Endereço" />
+    <h1>{{ address }}</h1>
+  </header>
+  <main>
+    <app-weather-current
+      [weatherCurrent]="weatherCurrent"
+      [isLoading]="isLoading"
+    ></app-weather-current>
+    <app-map #map (mapClick)="getWeatherForecast($event)"></app-map>
+    <app-weather-history
+      [weatherHistoryList]="weatherHistoryList"
+      [isLoading]="isLoading"
+      (historyClick)="getWeatherForecastHistoryById($event)"
+    ></app-weather-history>
+    <app-weather-daily
+      [weatherDailyList]="weatherDailyList"
+      [isLoading]="isLoading"
+    ></app-weather-daily>
+    <app-weather-hourly
+      [weatherHourlyList]="weatherHourlyList"
+      [isLoading]="isLoading"
+    ></app-weather-hourly>
+  </main>
 </section>
