--- a/src/app/pages/home/weather-current/weather-current.component.scss
+++ b/src/app/pages/home/weather-current/weather-current.component.scss
@@ -17,9 +17,14 @@ main {
   .big-icon {
     grid-column-start: 1;
     grid-column-end: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    height: 100%;
-    width: 100%;
+    img {
+      height: 8rem;
+      width: 8rem;
+    }
   }
 
   .temperature {
